--- a/.github/workflow/flow.yml
+++ b/.github/workflow/flow.yml
@@ -1,12 +1,12 @@
-name: flow
+name: CI
 
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
   
 
 jobs:
@@ -21,19 +21,15 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: 1.19
-    # - name: Install all Dependencies
-    #   run: go mod download
-    # - name: Run Go mod tidy
-    #   run: go mod tidy
+    - name: Get Install all Dependencies
+      run: go mod download
+    - name: Run Go mod tidy
+      run: go mod tidy
     - name: Build
+      run: go build
       env:   
         GOPRIVATE: <private imports if any>   
       run: CGO_ENABLED=0 GOOS=linux go build -o search_engine_task ./cmd
     - name: Run tests
       run: |
         go test -v -coverprofile=coverage.out ./...
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v1
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-        file: coverage.out
