--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,15 +1,15 @@
 name: CI
 
-on:
+on: 
   push:
     branches:
-      - main
+      - cmdUpdate
   pull_request:
     branches:
-      - main
+      - cmdUpdate
   
 
-jobs:
+jobs: 
   build:
     runs-on: ubuntu-latest
 
@@ -20,16 +20,24 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.19
-    - name: Get Install all Dependencies
-      run: go mod download
-    - name: Run Go mod tidy
-      run: go mod tidy
+        go-version: 1.19   
     - name: Build
-      run: go build
       env:   
         GOPRIVATE: <private imports if any>   
       run: CGO_ENABLED=0 GOOS=linux go build -o search_engine_task ./cmd
     - name: Run tests
       run: |
         go test -v -coverprofile=coverage.out ./...
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v1
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        file: coverage.out
+  golangci-lint:  
+    name: runner / golangci-lint
+    runs-on: ubuntu-latest
+    steps:    
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v3
+    - name: golangci-lint
+      uses: reviewdog/action-golangci-lint@v2
